# Axum_backend_use

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
src/: config.rs  db.rs  dtos.rs  error.rs  handlers.rs  mail.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs
src/db/: user.rs
src/handlers/: auth.rs  users.rs
src/mail/: mails.rs  sendmail.rs
src/utils/: password.rs
