[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.9"
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
