[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
argon2 = "0.5.3"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
validator = { version = "0.19.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
thiserror = "2.0.9"
chrono = { version = "0.4.39", features = ["serde"] }
time = "0.3.37"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
jsonwebtoken = "9.3.0"
lettre = "0.11.11"
