[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.87"
argon2 = "0.5.3"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "local-time",
] }
tracing-appender = "0.2.0"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
jsonwebtoken = "9.3.1"
lettre = "0.11.14"
